# ai-fundamental_insight

./: pyproject.toml
src/fundamental_insight/: main.py
src/fundamental_insight/analysis/: sentiment.py
src/fundamental_insight/data/: fetch_fundamentals.py  fetch_news.py
