[project]
name = "fundamental-insight"
version = "0.1.0"
description = ""
authors = [
    {name = "Andani Gowda S",email = "43707429+andanigowda@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "yfinance (>=0.2.63,<0.3.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "transformers (>=4.52.4,<5.0.0)",
    "torch (>=2.7.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "fundamental_insight", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
